# liboqs

./: .gitmodules  CMakeLists.txt  CONFIGURE.md
scripts/copy_from_upstream/src/kem/family/: CMakeLists.txt  kem_scheme.c
scripts/copy_from_upstream/src/sig/family/: sig_scheme.c
src/: oqsconfig.h.cmake
src/common/pqclean_shims/: fips202.h
src/common/sha3/: xkcp_dispatch.h  xkcp_sha3.c
src/common/sha3/xkcp_low/: CMakeLists.txt
src/common/sha3/xkcp_low/KeccakP-1600/plain-32bits/: KeccakP-1600-SnP.h  KeccakP-1600-opt32.c
src/kem/ml_kem/mlkem-native_ml-kem-768_ref/mlkem/src/: fips202_kyber.c  fips202_kyber.h  fips202_mbedtls.c  fips202_mbedtls.h  keccak1600_mbedtls.c  keccak1600_mbedtls.h
src/sig/: sig.c
src/sig/ml_dsa/: CMakeLists.txt  sig_ml_dsa.h  sig_ml_dsa_65.c
src/sig/ml_dsa/mldsa-native_ml-dsa-65_ref/integration/liboqs/: config_c.h
src/sig/ml_dsa/mldsa-native_ml-dsa-65_ref/mldsa/src/: fips202_kyber.c  fips202_kyber.h  poly.c  reduce.h  sign.c  symmetric.h
src/sig/ml_dsa/pqcrystals-dilithium-standard_ml-dsa-65_ref/: fips202_kyber.c  fips202_kyber.h
